corrected the searchbar misalignment

--- a/src/components/Search/Searchbar/Searchbar.css
+++ b/src/components/Search/Searchbar/Searchbar.css
@@ -1,18 +1,18 @@
-.Searchbar {
-    margin: auto;
+.Searchbar__wrapper {
+    display: flex;
     background: black;
 }
 
 .Searchbar-input {
+    font-size: 16px;
     width: 100%;
     line-height: 2.3em;
-    text-indent: 32px;
+    border: none;
     outline: none;
 }
 
 .Searchbar-glass {
-    position: relative;
-    float: left;
-    top: 27px;
-    left: 8px;
+    background: #fafafa;
+    padding: 6px 12px;
+    border: none;
 }
